Update school logo URLs

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="https://6z76leifsf.ufs.sh/f/L5CIuQd9dw1MQvvu88gADpy0Zti2YukxzfHQrcTFhNmSbnIs" />
+    <link rel="icon" type="image/png" href="https://images.pexels.com/photos/5905445/pexels-photo-5905445.jpeg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>St. Louis Demonstration Junior High School</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
