--- a/index.html
+++ b/index.html
@@ -18,5 +18,8 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+
+    <!-- ElevenLabs ConvAI Widget Script -->
+    <script src="https://elevenlabs.io/convai-widget/index.js" async type="text/javascript"></script>
   </body>
 </html>
