--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
   </head>
   <body>
     <div id="root"></div>
+    <style>
+      elevenlabs-convai {
+        position: fixed;
+        bottom: 0;
+        right: 20px;
+        z-index: 9999;
+        margin-bottom: 20px;
+      }
+    </style>
     <script type="module" src="/src/main.tsx"></script>
     <elevenlabs-convai agent-id="fAiPNUtMGChNGFI7nFy4"></elevenlabs-convai>
     <script src="https://unpkg.com/@elevenlabs/convai-widget-embed" async type="text/javascript"></script>
