Enhance SEO and meta tags across multiple pages, including HomePage, STEMPage, and StudentsHubPage, to improve search engine visibility and user engagement. Integrate react-helmet-async for dynamic head management. Update robots.txt to include additional sitemap locations for better indexing.

--- a/index.html
+++ b/index.html
@@ -1,19 +1,81 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" prefix="og: https://ogp.me/ns#">
   <head>
     <meta charset="UTF-8" />
+
+    <!-- Primary Meta Tags -->
+    <title>St. Louis Demonstration Junior High School - Excellence in Education | Ghana</title>
+    <meta name="title" content="St. Louis Demonstration Junior High School - Excellence in Education | Ghana" />
+    <meta name="description" content="St. Louis Demonstration JHS is a premier educational institution in Ghana, offering quality junior high school education with modern facilities, experienced teachers, and comprehensive academic programs." />
+    <meta name="keywords" content="St. Louis Demonstration JHS, junior high school Ghana, quality education Ghana, JHS Ghana, secondary education, academic excellence, STEM education, student resources, Ghana education" />
+    <meta name="author" content="St. Louis Demonstration JHS" />
+    <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1" />
+
+    <!-- Viewport and Mobile -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="St. Louis Demo JHS" />
+    <meta name="application-name" content="St. Louis Demonstration JHS" />
+
+    <!-- Theme and Colors -->
+    <meta name="theme-color" content="#1a1a1a" />
+    <meta name="msapplication-TileColor" content="#1a1a1a" />
+    <meta name="msapplication-navbutton-color" content="#1a1a1a" />
+
+    <!-- Favicon and Icons -->
     <link rel="icon" type="image/png" href="https://6z76leifsf.ufs.sh/f/L5CIuQd9dw1MQvvu88gADpy0Zti2YukxzfHQrcTFhNmSbnIs" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="apple-touch-icon" href="https://6z76leifsf.ufs.sh/f/L5CIuQd9dw1MQvvu88gADpy0Zti2YukxzfHQrcTFhNmSbnIs" />
+    <link rel="shortcut icon" href="https://6z76leifsf.ufs.sh/f/L5CIuQd9dw1MQvvu88gADpy0Zti2YukxzfHQrcTFhNmSbnIs" />
+
+    <!-- Preload Critical Resources -->
     <link
       rel="preload"
       href="https://6z76leifsf.ufs.sh/f/L5CIuQd9dw1MQvvu88gADpy0Zti2YukxzfHQrcTFhNmSbnIs"
       as="image"
       type="image/png"
     />
-    <title>St. Louis Demonstration Junior High School</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Anton&family=Dancing+Script:wght@400;500;600;700&family=Playfair+Display:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://stlouisdemojhs.com/" />
+
+    <!-- Sitemap -->
+    <link rel="sitemap" type="application/xml" href="/sitemap.xml" />
+
+    <!-- Performance and Preconnect -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://6z76leifsf.ufs.sh" />
+    <link rel="dns-prefetch" href="//www.google-analytics.com" />
+    <link rel="dns-prefetch" href="//www.googletagmanager.com" />
+    <link rel="dns-prefetch" href="//connect.facebook.net" />
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Anton&family=Dancing+Script:wght@400;500;600;700&family=Playfair+Display:wght@400;500;600;700;800;900&display=swap" rel="stylesheet" />
+
+    <!-- Geo and Location Meta -->
+    <meta name="geo.region" content="GH" />
+    <meta name="geo.country" content="Ghana" />
+    <meta name="geo.placename" content="Accra" />
+    <meta name="ICBM" content="5.6037,-0.1870" />
+
+    <!-- Educational Meta -->
+    <meta name="education.level" content="Junior High School" />
+    <meta name="education.type" content="Secondary Education" />
+    <meta name="institution.type" content="Educational" />
+    <meta name="audience" content="Students, Parents, Educators" />
+
+    <!-- Language and Content -->
+    <meta http-equiv="content-language" content="en" />
+    <meta name="language" content="English" />
+    <meta name="content-type" content="text/html; charset=utf-8" />
+
+    <!-- Security and Performance -->
+    <meta name="referrer" content="strict-origin-when-cross-origin" />
+    <meta http-equiv="x-dns-prefetch-control" content="on" />
+    <meta name="format-detection" content="telephone=no" />
+
   </head>
   <body>
     <div id="root"></div>
