Update TikTok videos and HTML structure for St. Louis Demo JHS. Added new video entries with updated metadata in JSON, including eight videos with zero engagement metrics. Modified HTML to reflect the latest video additions and improved footer content for clarity. Enhanced the add_real_videos script for better user interaction and added sample video functionality.

--- a/public/tiktok-videos.html
+++ b/public/tiktok-videos.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -34,7 +33,6 @@
             flex-direction: column;
             align-items: center;
         }
-        /* TikTok official embed styling */
         .tiktok-embed {
             max-width: 325px;
             min-height: 578px;
@@ -53,22 +51,6 @@
             font-size: 14px;
             color: #888;
         }
-        .video-meta {
-            font-size: 12px;
-            color: #666;
-            margin-top: 5px;
-        }
-        .loading-placeholder {
-            width: 325px;
-            height: 578px;
-            background: #111;
-            border-radius: 8px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: #666;
-            font-size: 14px;
-        }
         footer {
             text-align: center;
             margin-top: 40px;
@@ -83,112 +65,186 @@
     <div class="video-grid">
 
         <div class="video-item">
-            <!-- TikTok Official Embed -->
             <blockquote class="tiktok-embed"
-                       cite="https://www.tiktok.com/@ghanaschools/video/7234567890123456789"
-                       data-video-id="7234567890123456789"
+                       cite="https://www.tiktok.com/@nanaaphiah/video/7464571648251792645"
+                       data-video-id="7464571648251792645"
                        style="max-width: 325px; min-height: 578px;">
                 <section>
                     <a target="_blank"
-                       title="@ghanaschools"
-                       href="https://www.tiktok.com/@ghanaschools">@ghanaschools</a>
-                    <p>Amazing students at St. Louis Demo JHS showing their talents! #education #ghana #school #stlouisdemo</p>
-                    <a target="_blank"
-                       title="♬ original sound"
-                       href="https://www.tiktok.com/@ghanaschools/video/7234567890123456789">♬ original sound</a>
+                       title="@unknown"
+                       href="https://www.tiktok.com/@nanaaphiah/video/7464571648251792645">
+                        @unknown
+                    </a>
                 </section>
             </blockquote>
-
-            <!-- Video Info -->
             <div class="video-info">
                 <div class="video-stats">
-                    <span>❤️ 2.1K</span>
-                    <span>💬 89</span>
-                    <span>🔄 45</span>
-                </div>
-                <div class="video-meta">
-                    @ghanaschools  • 2024-12-01
+                    <span>👍 0</span>
+                    <span>💬 0</span>
+                    <span>🔄 0</span>
                 </div>
             </div>
         </div>
 
         <div class="video-item">
-            <!-- TikTok Official Embed -->
             <blockquote class="tiktok-embed"
-                       cite="https://www.tiktok.com/@educationgh/video/7234567890123456790"
-                       data-video-id="7234567890123456790"
+                       cite="https://www.tiktok.com/@obsessedw.nina_0/video/7484178586975358263"
+                       data-video-id="7484178586975358263"
                        style="max-width: 325px; min-height: 578px;">
                 <section>
                     <a target="_blank"
-                       title="@educationgh"
-                       href="https://www.tiktok.com/@educationgh">@educationgh</a>
-                    <p>Visit to St. Louis Demonstration JHS - incredible learning environment! #ghanaschools #education #demonstration</p>
-                    <a target="_blank"
-                       title="♬ original sound"
-                       href="https://www.tiktok.com/@educationgh/video/7234567890123456790">♬ original sound</a>
+                       title="@unknown"
+                       href="https://www.tiktok.com/@obsessedw.nina_0/video/7484178586975358263">
+                        @unknown
+                    </a>
                 </section>
             </blockquote>
-
-            <!-- Video Info -->
             <div class="video-info">
                 <div class="video-stats">
-                    <span>❤️ 1.8K</span>
-                    <span>💬 67</span>
-                    <span>🔄 34</span>
-                </div>
-                <div class="video-meta">
-                    @educationgh ✓ • 2024-11-28
+                    <span>👍 0</span>
+                    <span>💬 0</span>
+                    <span>🔄 0</span>
                 </div>
             </div>
         </div>
 
         <div class="video-item">
-            <!-- TikTok Official Embed -->
             <blockquote class="tiktok-embed"
-                       cite="https://www.tiktok.com/@schoolsofghana/video/7234567890123456791"
-                       data-video-id="7234567890123456791"
+                       cite="https://www.tiktok.com/@cantonajnr/video/7510529963448126726"
+                       data-video-id="7510529963448126726"
                        style="max-width: 325px; min-height: 578px;">
                 <section>
                     <a target="_blank"
-                       title="@schoolsofghana"
-                       href="https://www.tiktok.com/@schoolsofghana">@schoolsofghana</a>
-                    <p>Demonstration JHS students excel in science fair! Proud of these young minds 🧠 #demonstration #science #ghana</p>
-                    <a target="_blank"
-                       title="♬ original sound"
-                       href="https://www.tiktok.com/@schoolsofghana/video/7234567890123456791">♬ original sound</a>
+                       title="@unknown"
+                       href="https://www.tiktok.com/@cantonajnr/video/7510529963448126726">
+                        @unknown
+                    </a>
                 </section>
             </blockquote>
-
-            <!-- Video Info -->
             <div class="video-info">
                 <div class="video-stats">
-                    <span>❤️ 3.2K</span>
-                    <span>💬 124</span>
-                    <span>🔄 78</span>
+                    <span>👍 0</span>
+                    <span>💬 0</span>
+                    <span>🔄 0</span>
                 </div>
-                <div class="video-meta">
-                    @schoolsofghana  • 2024-11-25
+            </div>
+        </div>
+
+        <div class="video-item">
+            <blockquote class="tiktok-embed"
+                       cite="https://www.tiktok.com/@cantonajnr/video/7509545554582539525"
+                       data-video-id="7509545554582539525"
+                       style="max-width: 325px; min-height: 578px;">
+                <section>
+                    <a target="_blank"
+                       title="@unknown"
+                       href="https://www.tiktok.com/@cantonajnr/video/7509545554582539525">
+                        @unknown
+                    </a>
+                </section>
+            </blockquote>
+            <div class="video-info">
+                <div class="video-stats">
+                    <span>👍 0</span>
+                    <span>💬 0</span>
+                    <span>🔄 0</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="video-item">
+            <blockquote class="tiktok-embed"
+                       cite="https://www.tiktok.com/@nanaaphiah/video/7494287858920951045"
+                       data-video-id="7494287858920951045"
+                       style="max-width: 325px; min-height: 578px;">
+                <section>
+                    <a target="_blank"
+                       title="@unknown"
+                       href="https://www.tiktok.com/@nanaaphiah/video/7494287858920951045">
+                        @unknown
+                    </a>
+                </section>
+            </blockquote>
+            <div class="video-info">
+                <div class="video-stats">
+                    <span>👍 0</span>
+                    <span>💬 0</span>
+                    <span>🔄 0</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="video-item">
+            <blockquote class="tiktok-embed"
+                       cite="https://www.tiktok.com/@amoanimaa4420/video/7394861582217383173"
+                       data-video-id="7394861582217383173"
+                       style="max-width: 325px; min-height: 578px;">
+                <section>
+                    <a target="_blank"
+                       title="@unknown"
+                       href="https://www.tiktok.com/@amoanimaa4420/video/7394861582217383173">
+                        @unknown
+                    </a>
+                </section>
+            </blockquote>
+            <div class="video-info">
+                <div class="video-stats">
+                    <span>👍 0</span>
+                    <span>💬 0</span>
+                    <span>🔄 0</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="video-item">
+            <blockquote class="tiktok-embed"
+                       cite="https://www.tiktok.com/@she.is.bridget/video/7502576072219823365"
+                       data-video-id="7502576072219823365"
+                       style="max-width: 325px; min-height: 578px;">
+                <section>
+                    <a target="_blank"
+                       title="@unknown"
+                       href="https://www.tiktok.com/@she.is.bridget/video/7502576072219823365">
+                        @unknown
+                    </a>
+                </section>
+            </blockquote>
+            <div class="video-info">
+                <div class="video-stats">
+                    <span>👍 0</span>
+                    <span>💬 0</span>
+                    <span>🔄 0</span>
+                </div>
+            </div>
+        </div>
+
+        <div class="video-item">
+            <blockquote class="tiktok-embed"
+                       cite="https://www.tiktok.com/@bigjames_11/video/7343986573156879622"
+                       data-video-id="7343986573156879622"
+                       style="max-width: 325px; min-height: 578px;">
+                <section>
+                    <a target="_blank"
+                       title="@unknown"
+                       href="https://www.tiktok.com/@bigjames_11/video/7343986573156879622">
+                        @unknown
+                    </a>
+                </section>
+            </blockquote>
+            <div class="video-info">
+                <div class="video-stats">
+                    <span>👍 0</span>
+                    <span>💬 0</span>
+                    <span>🔄 0</span>
                 </div>
             </div>
         </div>
 
     </div>
-
     <footer>
-        <p>🎵 Videos automatically updated weekly</p>
-        <p>Last update: 2025-06-09 15:47:03</p>
-        <p style="font-size: 12px; margin-top: 10px;">
-            Powered by TikTok's official embed system
-        </p>
+        <p>🎓 St. Louis Demonstration JHS</p>
+        <p>📅 Last updated: June 09, 2025</p>
+        <p>📹 8 videos</p>
     </footer>
-
-    <script>
-        // Ensure TikTok embeds load properly
-        window.addEventListener('load', function() {
-            if (window.tiktokEmbed) {
-                window.tiktokEmbed.lib.render();
-            }
-        });
-    </script>
 </body>
 </html>
