Add PWA support by including a manifest link in index.html and implementing service worker registration in main.tsx. Enhance Hero component to manage PWA installation prompts and display an install button for users.

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
     <link rel="apple-touch-icon" href="https://6z76leifsf.ufs.sh/f/L5CIuQd9dw1MQvvu88gADpy0Zti2YukxzfHQrcTFhNmSbnIs" />
     <link rel="shortcut icon" href="https://6z76leifsf.ufs.sh/f/L5CIuQd9dw1MQvvu88gADpy0Zti2YukxzfHQrcTFhNmSbnIs" />
 
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="/manifest.json" />
+
     <!-- Preload Critical Resources -->
     <link
       rel="preload"
