Update PWA configuration and enhance installation experience. Modify app name in manifest and HTML, improve service worker caching strategy, and enhance user prompts for app installation on iOS and other platforms. Add additional icon sizes for better display across devices.

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="St. Louis Demo JHS" />
-    <meta name="application-name" content="St. Louis Demonstration JHS" />
+    <meta name="apple-mobile-web-app-title" content="St. Louis Demo. J.H.S" />
+    <meta name="application-name" content="St. Louis Demo. J.H.S" />
 
     <!-- Theme and Colors -->
     <meta name="theme-color" content="#1a1a1a" />
