Update SEO metadata: site name to 'Best School in Ghana - SLDJHS' and page title to 'ST. LOUIS DEMONSTRATION J.H.S - Leading Education'

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
 
     <!-- Primary Meta Tags -->
-    <title>St. Louis Demonstration Junior High School - Excellence in Education | Ghana</title>
-    <meta name="title" content="St. Louis Demonstration Junior High School - Excellence in Education | Ghana" />
+    <title>ST. LOUIS DEMONSTRATION J.H.S - Leading Education</title>
+    <meta name="title" content="ST. LOUIS DEMONSTRATION J.H.S - Leading Education" />
     <meta name="description" content="St. Louis Demonstration JHS is a premier educational institution in Ghana, offering quality junior high school education with modern facilities, experienced teachers, and comprehensive academic programs." />
     <meta name="keywords" content="St. Louis Demonstration JHS, junior high school Ghana, quality education Ghana, JHS Ghana, secondary education, academic excellence, STEM education, student resources, Ghana education" />
     <meta name="author" content="St. Louis Demonstration JHS" />
@@ -16,8 +16,8 @@
     <meta name="mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
-    <meta name="apple-mobile-web-app-title" content="St. Louis Demo. J.H.S" />
-    <meta name="application-name" content="St. Louis Demo. J.H.S" />
+    <meta name="apple-mobile-web-app-title" content="Best School in Ghana - SLDJHS" />
+    <meta name="application-name" content="Best School in Ghana - SLDJHS" />
 
     <!-- Theme and Colors -->
     <meta name="theme-color" content="#1a1a1a" />
