Add local favicon files and update all references to use self-hosted icons

--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
     <meta name="msapplication-navbutton-color" content="#1a1a1a" />
 
     <!-- Favicon and Icons -->
-    <link rel="icon" type="image/png" href="https://6z76leifsf.ufs.sh/f/L5CIuQd9dw1MQvvu88gADpy0Zti2YukxzfHQrcTFhNmSbnIs" />
-    <link rel="apple-touch-icon" href="https://6z76leifsf.ufs.sh/f/L5CIuQd9dw1MQvvu88gADpy0Zti2YukxzfHQrcTFhNmSbnIs" />
-    <link rel="shortcut icon" href="https://6z76leifsf.ufs.sh/f/L5CIuQd9dw1MQvvu88gADpy0Zti2YukxzfHQrcTFhNmSbnIs" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png" />
+    <link rel="shortcut icon" href="/favicon.ico" />
 
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json" />
