Complete AdSense setup: add verification meta tag, update ads.txt with official snippet, integrate Publisher ID ca-pub-3612569845845172 across all AdSense components for site monetization

--- a/index.html
+++ b/index.html
@@ -80,6 +80,11 @@
     <meta http-equiv="x-dns-prefetch-control" content="on" />
     <meta name="format-detection" content="telephone=no" />
 
+    <!-- Google AdSense -->
+    <meta name="google-adsense-account" content="ca-pub-3612569845845172">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3612569845845172"
+         crossorigin="anonymous"></script>
+
     <!-- Google Tag Manager -->
     <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
     new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
