Optimize favicon implementation for Google Search - follow official Google guidelines for better search result display

--- a/index.html
+++ b/index.html
@@ -24,11 +24,17 @@
     <meta name="msapplication-TileColor" content="#1a1a1a" />
     <meta name="msapplication-navbutton-color" content="#1a1a1a" />
 
-    <!-- Favicon and Icons -->
+    <!-- Favicon and Icons - Google Search Compatible -->
+    <!-- Primary favicon for Google Search (recommended 48x48px+) -->
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png" />
     <link rel="shortcut icon" href="/favicon.ico" />
+
+    <!-- Apple Touch Icons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png" />
+
+    <!-- Android Chrome Icons -->
+    <link rel="icon" type="image/png" sizes="192x192" href="/android-icon-192x192.png" />
 
     <!-- PWA Manifest -->
     <link rel="manifest" href="/manifest.json" />
