--- a/index.html
+++ b/index.html
@@ -99,6 +99,16 @@
     })(window,document,'script','dataLayer','GTM-M82SVKTZ');</script>
     <!-- End Google Tag Manager -->
 
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9SVFNXDWG0"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-9SVFNXDWG0');
+    </script>
+
   </head>
   <body>
     <!-- Google Tag Manager (noscript) -->
