--- a/index.html
+++ b/index.html
@@ -86,6 +86,9 @@
     <meta http-equiv="x-dns-prefetch-control" content="on" />
     <meta name="format-detection" content="telephone=no" />
 
+    <!-- Bing Webmaster Tools Verification -->
+    <meta name="msvalidate.01" content="65299BB5AB2F255A66AB23A677D8A9EA" />
+
     <!-- Google AdSense -->
     <meta name="google-adsense-account" content="ca-pub-3612569845845172">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3612569845845172"
